--- a/index.html
+++ b/index.html
@@ -3,9 +3,8 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-
-  <link rel="icon" type="image/png" sizes="32x32" href="./assets/favicon-32x32.png">
-  
+  <!-- link facicon image -->
+  <link rel="icon" type="image/png" sizes="32x32" href="./img/facicon.svg">
   <title>Typemaster pre-launch landing page</title>
 </head>
 <body>
