donwload fonts and links

--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
   <!-- link facicon image -->
   <link rel="icon" type="image/png" sizes="32x32" href="./img/facicon.svg">
   <title>Typemaster pre-launch landing page</title>
+  <!-- links main.css file -->
+  <link rel="stylesheet" href="./css/main.css">
 </head>
 <body>
   
