add site-header section

--- a/index.html
+++ b/index.html
@@ -10,7 +10,21 @@
   <link rel="stylesheet" href="./css/main.css">
 </head>
 <body>
-  
+
+  <!-- SITE-HEADER-HERO -->
+  <div class="site-header-hero">
+    <header class="site-header">
+      <div class="container d-flex">
+        <a href="#!" class="site-header__logo logo">
+          <img src="./img/desktop/logo.svg" alt="Site logo" class="logo-image">
+        </a>
+
+        <a href="#!" class="site-header__btn light-btn">Pre-order now</a>
+      </div>
+    </header>
+  </div>
+  <!-- SITE-HEADER-HERO -->
+
 
 </body>
 </html>
