--- a/index.html
+++ b/index.html
@@ -18,10 +18,32 @@
         <a href="#!" class="site-header__logo logo">
           <img src="./img/desktop/logo.svg" alt="Site logo" class="logo-image">
         </a>
-
+        
         <a href="#!" class="site-header__btn light-btn">Pre-order now</a>
       </div>
     </header>
+
+    <div class="site-hero">
+      <div class="container">
+        <div class="site-hero__desc">
+          <h1 class="site-hero__title">Typemaster
+            Keyboard</h1>
+            <p class="site-hero__text">Improve your productivity and gaming without breaking the bank. Upgrade to a high quality mechanical typing experience.</p>
+            <div class="site-hero__button">
+              <a href="#!" class="site-hero__btn orange-btn">Pre-order now</a>
+
+              <span class="site-hero__release">  Release on 5/27</span>
+            </div>
+        </div>
+        <div class="site-hero__keyword keyword">
+          <picture class="keyword-picture">
+            <source media="(max-width: 576px)" srcset="./img/mobile/image-keyboard.jpg">
+            <source media="(max-width: 992px) " srcset="./img/tablet/image-keyboard.jpg">
+            <img src="./img/desktop/image-keyboard.jpg" class="keyword-image">
+          </picture>
+        </div>
+      </div>
+    </div>
   </div>
   <!-- SITE-HEADER-HERO -->
 
