--- a/index.html
+++ b/index.html
@@ -24,14 +24,13 @@
     </header>
 
     <div class="site-hero">
-      <div class="container">
+      <div class="container d-flex">
         <div class="site-hero__desc">
           <h1 class="site-hero__title">Typemaster
             Keyboard</h1>
             <p class="site-hero__text">Improve your productivity and gaming without breaking the bank. Upgrade to a high quality mechanical typing experience.</p>
             <div class="site-hero__button">
               <a href="#!" class="site-hero__btn orange-btn">Pre-order now</a>
-
               <span class="site-hero__release">  Release on 5/27</span>
             </div>
         </div>
@@ -46,6 +45,40 @@
     </div>
   </div>
   <!-- SITE-HEADER-HERO -->
+
+
+  <!-- SITE-MAIN -->
+  <main class="site-main">
+    <section class="about">
+      <div class="container">
+        <div class="about-content">
+          <div class="about-picture">
+            <div class="about-glass">
+              <picture class="about-glass__picture">
+                <source media="(max-width: 576px)" srcset="./img/mobile/image-glass-and-keyboard.jpg">
+               <source media="(max-width: 992px) " srcset="./img/tablet/image-glass-and-keyboard.jpg">
+                <img src="./img/desktop/image-glass-and-keyboard.jpg" alt="Image glass" class="about-glass__image">
+              </picture>
+            </div>
+            <div class="about-phone">
+             <picture class="about-phone__picture">
+              <source media="(max-width: 576px)" srcset="./img/mobile/image-phone-and-keyboard.jpg">
+              <source media="(max-width: 992px) " srcset="./img/tablet/image-phone-and-keyboard.jpg">
+              <img src="./img/desktop/image-phone-and-keyboard.jpg" alt="Image phone" class="about-phone__image">
+             </picture>
+            </div>
+          </div>
+          <div class="about-desc">
+            <h2 class="about-desc__title">mechanical wireless
+              Keyboard</h2>
+            <p class="about-desc__text">The Typemaster keyboard boasts 
+              top-notch build and practical design. It offers a wide variety of switches and keycaps, along with reliable wireless connectivity.</p>
+          </div>
+        </div>
+      </div>
+    </section>
+  </main>
+  <!-- SITE-MAIN -->
 
 
 </body>
