--- a/index.html
+++ b/index.html
@@ -53,19 +53,20 @@
       <div class="container">
         <div class="about-content">
           <div class="about-picture">
+            <div class="about-phone">
+             <picture class="about-phone__picture">
+                <source media="(max-width: 576px)" srcset="./img/mobile/image-phone-and-keyboard.jpg">
+                <source media="(max-width: 992px) " srcset="./img/tablet/image-phone-and-keyboard.jpg">
+                <img src="./img/desktop/image-phone-and-keyboard.jpg" alt="Image phone" class="about-phone__image">
+             </picture>
+             <div class="about-phone__content"></div>
+            </div>
             <div class="about-glass">
               <picture class="about-glass__picture">
                 <source media="(max-width: 576px)" srcset="./img/mobile/image-glass-and-keyboard.jpg">
                <source media="(max-width: 992px) " srcset="./img/tablet/image-glass-and-keyboard.jpg">
                 <img src="./img/desktop/image-glass-and-keyboard.jpg" alt="Image glass" class="about-glass__image">
               </picture>
-            </div>
-            <div class="about-phone">
-             <picture class="about-phone__picture">
-              <source media="(max-width: 576px)" srcset="./img/mobile/image-phone-and-keyboard.jpg">
-              <source media="(max-width: 992px) " srcset="./img/tablet/image-phone-and-keyboard.jpg">
-              <img src="./img/desktop/image-phone-and-keyboard.jpg" alt="Image phone" class="about-phone__image">
-             </picture>
             </div>
           </div>
           <div class="about-desc">
