add site-footer section

--- a/index.html
+++ b/index.html
@@ -135,6 +135,12 @@
   </main>
   <!-- SITE-MAIN -->
 
+  <!-- SITE-FOOTER -->
+  <footer class="site-footer">
+    <p class="site-footer__text"><span class="site-footer__bold">IT LIVE 2024</span>  |  All Rights Reserved</p>
+  </footer>
+  <!-- SITE-FOOTER -->
+
 
 </body>
 </html>
